@@ -79,7 +79,7 @@ literal|"concat"
 argument_list|,
 name|value
 operator|=
-literal|"_FUNC_(str1, str2) - returns the concatenation of str1 and str2"
+literal|"_FUNC_(str1, str2, ... strN) - returns the concatenation of str1, str2, ... strN"
 argument_list|,
 name|extended
 operator|=
@@ -113,19 +113,38 @@ name|Text
 name|evaluate
 parameter_list|(
 name|Text
-name|a
-parameter_list|,
-name|Text
-name|b
+modifier|...
+name|args
 parameter_list|)
+block|{
+name|text
+operator|.
+name|clear
+argument_list|()
+expr_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|args
+operator|.
+name|length
+condition|;
+name|i
+operator|++
+control|)
 block|{
 if|if
 condition|(
-name|a
-operator|==
-literal|null
-operator|||
-name|b
+name|args
+index|[
+name|i
+index|]
 operator|==
 literal|null
 condition|)
@@ -136,33 +155,28 @@ return|;
 block|}
 name|text
 operator|.
-name|clear
-argument_list|()
-expr_stmt|;
-name|text
-operator|.
-name|set
-argument_list|(
-name|a
-argument_list|)
-expr_stmt|;
-name|text
-operator|.
 name|append
 argument_list|(
-name|b
+name|args
+index|[
+name|i
+index|]
 operator|.
 name|getBytes
 argument_list|()
 argument_list|,
 literal|0
 argument_list|,
-name|b
+name|args
+index|[
+name|i
+index|]
 operator|.
 name|getLength
 argument_list|()
 argument_list|)
 expr_stmt|;
+block|}
 return|return
 name|text
 return|;
