@@ -1,0 +1,45 @@
+PREHOOK: query: DESCRIBE FUNCTION concat
+PREHOOK: type: DESCFUNCTION
+POSTHOOK: query: DESCRIBE FUNCTION concat
+POSTHOOK: type: DESCFUNCTION
+concat(str1, str2, ... strN) - returns the concatenation of str1, str2, ... strN
+PREHOOK: query: DESCRIBE FUNCTION EXTENDED concat
+PREHOOK: type: DESCFUNCTION
+POSTHOOK: query: DESCRIBE FUNCTION EXTENDED concat
+POSTHOOK: type: DESCFUNCTION
+concat(str1, str2, ... strN) - returns the concatenation of str1, str2, ... strN
+Returns NULL if any argument is NULL.
+Example:
+  > SELECT concat('abc', 'def') FROM src LIMIT 1;
+  'abcdef'
+PREHOOK: query: SELECT
+  concat('a', 'b'),
+  concat('a', 'b', 'c'),
+  concat('a', null, 'c'),
+  concat(null),
+  concat('a'),
+  concat(null, 1, 2),
+  concat(1, 2, 3, 'a'),
+  concat(1, 2),
+  concat(1),
+  concat('1234', 'abc', 'extra argument')
+FROM src LIMIT 1
+PREHOOK: type: QUERY
+PREHOOK: Input: default@src
+PREHOOK: Output: file:/data/users/pyang/trunk/VENDOR.hive/trunk/build/ql/tmp/1314227124/10000
+POSTHOOK: query: SELECT
+  concat('a', 'b'),
+  concat('a', 'b', 'c'),
+  concat('a', null, 'c'),
+  concat(null),
+  concat('a'),
+  concat(null, 1, 2),
+  concat(1, 2, 3, 'a'),
+  concat(1, 2),
+  concat(1),
+  concat('1234', 'abc', 'extra argument')
+FROM src LIMIT 1
+POSTHOOK: type: QUERY
+POSTHOOK: Input: default@src
+POSTHOOK: Output: file:/data/users/pyang/trunk/VENDOR.hive/trunk/build/ql/tmp/1314227124/10000
+ab	abc	NULL	NULL	a	NULL	123a	12	1	1234abcextra argument
