@@ -1,0 +1,112 @@
+PREHOOK: query: CREATE TABLE dest1(key STRING, value STRING) STORED AS TEXTFILE
+PREHOOK: type: CREATETABLE
+POSTHOOK: query: CREATE TABLE dest1(key STRING, value STRING) STORED AS TEXTFILE
+POSTHOOK: type: CREATETABLE
+POSTHOOK: Output: default@dest1
+PREHOOK: query: FROM src
+INSERT OVERWRITE TABLE dest1 SELECT concat('1234', 'abc', 'extra argument'), src.value WHERE src.key < 100
+PREHOOK: type: QUERY
+PREHOOK: Input: default@src
+PREHOOK: Output: default@dest1
+POSTHOOK: query: FROM src
+INSERT OVERWRITE TABLE dest1 SELECT concat('1234', 'abc', 'extra argument'), src.value WHERE src.key < 100
+POSTHOOK: type: QUERY
+POSTHOOK: Input: default@src
+POSTHOOK: Output: default@dest1
+PREHOOK: query: SELECT dest1.* FROM dest1
+PREHOOK: type: QUERY
+PREHOOK: Input: default@dest1
+PREHOOK: Output: file:/data/users/pyang/trunk/VENDOR.hive/trunk/build/ql/tmp/2058952662/10000
+POSTHOOK: query: SELECT dest1.* FROM dest1
+POSTHOOK: type: QUERY
+POSTHOOK: Input: default@dest1
+POSTHOOK: Output: file:/data/users/pyang/trunk/VENDOR.hive/trunk/build/ql/tmp/2058952662/10000
+1234abcextra argument	val_86
+1234abcextra argument	val_27
+1234abcextra argument	val_98
+1234abcextra argument	val_66
+1234abcextra argument	val_37
+1234abcextra argument	val_15
+1234abcextra argument	val_82
+1234abcextra argument	val_17
+1234abcextra argument	val_0
+1234abcextra argument	val_57
+1234abcextra argument	val_20
+1234abcextra argument	val_92
+1234abcextra argument	val_47
+1234abcextra argument	val_72
+1234abcextra argument	val_4
+1234abcextra argument	val_35
+1234abcextra argument	val_54
+1234abcextra argument	val_51
+1234abcextra argument	val_65
+1234abcextra argument	val_83
+1234abcextra argument	val_12
+1234abcextra argument	val_67
+1234abcextra argument	val_84
+1234abcextra argument	val_58
+1234abcextra argument	val_8
+1234abcextra argument	val_24
+1234abcextra argument	val_42
+1234abcextra argument	val_0
+1234abcextra argument	val_96
+1234abcextra argument	val_26
+1234abcextra argument	val_51
+1234abcextra argument	val_43
+1234abcextra argument	val_95
+1234abcextra argument	val_98
+1234abcextra argument	val_85
+1234abcextra argument	val_77
+1234abcextra argument	val_0
+1234abcextra argument	val_87
+1234abcextra argument	val_15
+1234abcextra argument	val_72
+1234abcextra argument	val_90
+1234abcextra argument	val_19
+1234abcextra argument	val_10
+1234abcextra argument	val_5
+1234abcextra argument	val_58
+1234abcextra argument	val_35
+1234abcextra argument	val_95
+1234abcextra argument	val_11
+1234abcextra argument	val_34
+1234abcextra argument	val_42
+1234abcextra argument	val_78
+1234abcextra argument	val_76
+1234abcextra argument	val_41
+1234abcextra argument	val_30
+1234abcextra argument	val_64
+1234abcextra argument	val_76
+1234abcextra argument	val_74
+1234abcextra argument	val_69
+1234abcextra argument	val_33
+1234abcextra argument	val_70
+1234abcextra argument	val_5
+1234abcextra argument	val_2
+1234abcextra argument	val_35
+1234abcextra argument	val_80
+1234abcextra argument	val_44
+1234abcextra argument	val_53
+1234abcextra argument	val_90
+1234abcextra argument	val_12
+1234abcextra argument	val_5
+1234abcextra argument	val_70
+1234abcextra argument	val_24
+1234abcextra argument	val_70
+1234abcextra argument	val_83
+1234abcextra argument	val_26
+1234abcextra argument	val_67
+1234abcextra argument	val_18
+1234abcextra argument	val_9
+1234abcextra argument	val_18
+1234abcextra argument	val_97
+1234abcextra argument	val_84
+1234abcextra argument	val_28
+1234abcextra argument	val_37
+1234abcextra argument	val_90
+1234abcextra argument	val_97
+PREHOOK: query: DROP TABLE dest1
+PREHOOK: type: DROPTABLE
+POSTHOOK: query: DROP TABLE dest1
+POSTHOOK: type: DROPTABLE
+POSTHOOK: Output: default@dest1
